--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "bootstrap": "^5.3.1",
     "framer-motion": "^10.16.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "scrollreveal": "^4.0.9",
+    "typed.js": "^2.0.16"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
