--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "framer-motion": "^10.16.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-star-ratings": "^2.3.0",
     "scrollreveal": "^4.0.9",
     "typed.js": "^2.0.16"
   },
